# spaces

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: homebrew-tap.yml
scripts/: render-homebrew-formula.sh
src/: app.rs  cli.rs  git.rs  lib.rs  main.rs  names.rs  registry.rs  repo_picker.rs
tasks/: todo.md
tests/: create_directory_tui.rs
tests/support/: mod.rs
