[package]
name = "spaces"
version = "0.1.0"
edition = "2021"
description = "Create and manage coordinated multi-repo git workspaces"
license = "MIT"
repository = "https://github.com/AnthonyAltieri/spaces"
homepage = "https://github.com/AnthonyAltieri/spaces"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fuzzy-matcher = "0.3"
rand = "0.8"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
expectrl = "0.8"
tempfile = "3.13"
